--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,16 @@
 version: '3'
 services:
   ioq3svr:
-    image: ioq3svr:latest
+    build: .
+    image: ioq3svr
     environment:
       - PUID=1026
       - PGID=100
       - ADMIN_PASSWORD=12345678
+    container_name: ioq3svr
     ports:
       - "27960:27960/udp"
     volumes:
-      - /home/xuan/Linux/Q3A/baseq3:/q3a/baseq3:ro
-      - /home/xuan/Linux/Q3A/server:/usr/local/games/quake3/.q3a/baseq3:rw
+      - ../../Q3A/baseq3:/q3a/baseq3:ro
+      - ../../Q3A/server/logs:/var/log
+      - ../../Q3A/server/configs:/usr/local/games/quake3/.q3a/baseq3
